--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "bootstrap": "^5.3.3",
     "expo": "~52.0.35",
     "expo-cli": "^6.3.12",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-web": "~0.19.13"
