--- a/Firebase/package.json
+++ b/Firebase/package.json
@@ -9,20 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.1",
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/react": "~18.2.45",
+    "antd": "^5.25.1",
     "expo": "~50.0.5",
+    "expo-font": "^13.3.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "typescript": "^5.3.0",
-    "@types/react": "~18.2.45",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
